--- a/pages/index.html
+++ b/pages/index.html
@@ -12,11 +12,9 @@
 <body>
     <div class="menu">
         <nav>
-            <a href="index.html">Inicio</a>
-            <a href="#">Adicionar Pet</a>
-            <a href="#">Listar Pets</a>
-            <a href="#">Perfil</a>
-            <a href="login.html" id="login-link">Sair</a>
+            <a href="index.html" class="active">Inicio</a>
+            <a href="#">Cadastre-se</a>
+            <a href="login.html" id="login-link">Entrar</a>
         </nav>
     </div>
     <main class="container">
