--- a/pages/login.html
+++ b/pages/login.html
@@ -3,11 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/login.css">
+    <link rel="stylesheet" href="../css/login.css">
+    <link rel="stylesheet" href="../css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Login</title>
 </head>
 <body>
+    <div class="menu">
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="#">Cadastre-se</a>
+            <a href="login.html" id="login-link"  class="active">Entrar</a>
+        </nav>
+    </div>
 
     <div id="login">
     <h2 class="login-title">Bem-vindo de volta </h2>
@@ -24,8 +33,12 @@
 
         <button type="submit">Enviar</button>
     </form>
-    <img src="/assets/img/logo.png" alt="Logo" class="logo">
+    <img src="../assets/img/logo.png" alt="Logo" class="logo">
     </div>
+
+    <footer class="bg-dark text-white text-center p-3">
+        <p>&copy; 2025 - Desenvolvimento Web I. Todos os direitos reservados.</p>
+    </footer>
 
 </body>
 </html>
