adiciona swipe e mock do login

--- a/pages/adotante/editarperfil.html
+++ b/pages/adotante/editarperfil.html
@@ -12,8 +12,8 @@
 <body>
     <div class="menu">
         <nav>
-            <a href="#">Adotar</a>
-            <a href="#">Favoritos</a>
+            <a href="../adotante/listar-pets.html">Adotar</a>
+            <a href="../adotante/favoritos.html">Favoritos</a>
             <a href="../adotante/editarperfil.html" class="active">Perfil</a>
             <a href="../login.html" id="login-link">Sair</a>
         </nav>
