--- a/pages/login.html
+++ b/pages/login.html
@@ -20,7 +20,7 @@
 
     <div id="login">
     <h2 class="login-title">Bem-vindo de volta </h2>
-    <form>
+    <form id="loginForm">
         <div class="form-line">
         <label for="email">Email:</label>
         <input type="email" name="email" id="email" placeholder="Digite seu email" required>
@@ -31,6 +31,8 @@
         <input type="password" name="password" id="password" placeholder="Digite sua senha" required>
         </div>
 
+        <p id="errorMessage" class="error-message"></p>
+
         <button type="submit">Enviar</button>
     </form>
     <img src="../assets/img/logo.png" alt="Logo" class="logo">
@@ -39,6 +41,8 @@
     <footer class="bg-dark text-white text-center p-3">
         <p>&copy; 2025 - Desenvolvimento Web I. Todos os direitos reservados.</p>
     </footer>
+
+    <script src="../script/login.js"></script>
 
 </body>
 </html>
