--- a/pages/voluntario/editar-pet.html
+++ b/pages/voluntario/editar-pet.html
@@ -15,7 +15,7 @@
             <a href="../voluntario/home_voluntario.html" class="active">Animais Cadastrados</a>
             <a href="../voluntario/cadastro-pet.html">Adicionar Pet</a>
             <a href="../voluntario/editarperfil.html">Perfil</a>
-            <a href="login.html" id="login-link">Sair</a>
+            <a href="../login.html" id="login-link">Sair</a>
         </nav>
     </div>
     <main class="container py-4">
