--- a/pages/adotante/favoritos.html
+++ b/pages/adotante/favoritos.html
@@ -14,7 +14,8 @@
         <nav>
             <a href="../adotante/listar-pets.html">Adotar</a>
             <a href="../adotante/favoritos.html"  class="active">Favoritos</a>
-            <a href="../adotante/editarperfil.html">Perfil</a>
+            <a href="../chat.html">Chat</a>
+            <a href="../editarperfil.html">Perfil</a>
             <a href="../login.html" id="login-link">Sair</a>
         </nav>
     </div>
