--- a/pages/adotante/listar-pets.html
+++ b/pages/adotante/listar-pets.html
@@ -18,7 +18,8 @@
         <nav>
             <a href="../adotante/listar-pets.html" class="active">Adotar</a>
             <a href="../adotante/favoritos.html">Favoritos</a>
-            <a href="../adotante/editarperfil.html">Perfil</a>
+            <a href="../chat.html">Chat</a>
+            <a href="../editarperfil.html">Perfil</a>
             <a href="../login.html" id="login-link">Sair</a>
         </nav>
     </div>
