--- a/pages/editarperfil.html
+++ b/pages/editarperfil.html
@@ -3,19 +3,30 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="../css/login.css">
-    <link rel="stylesheet" href="../../css/style.css">
-    <link rel="stylesheet" href="../../css/card.css">
+    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="../css/card.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <title>Editar Perfil</title>
 </head>
 <body>
-    <div class="menu">
+    <div class="menu" id="menu-adotante">
         <nav>
-            <a href="../adotante/listar-pets.html">Adotar</a>
-            <a href="../adotante/favoritos.html">Favoritos</a>
-            <a href="../adotante/editarperfil.html" class="active">Perfil</a>
-            <a href="../login.html" id="login-link">Sair</a>
+            <a href="../pages/adotante/listar-pets.html">Adotar</a>
+            <a href="../pages/adotante/favoritos.html">Favoritos</a>
+            <a href="chat.html">Chat</a>
+            <a href="editarperfil.html" class="active">Perfil</a>
+            <a href="login.html" id="login-link">Sair</a>
+        </nav>
+    </div>
+
+    <div class="menu" id="menu-voluntario">
+        <nav>
+            <a href="../voluntario/home_voluntario.html">Animais Cadastrados</a>
+            <a href="../voluntario/cadastro-pet.html">Adicionar Pet</a>
+            <a href="chat.html">Chat</a>
+            <a href="editarperfil.html" class="active">Perfil</a>
+            <a href="login.html" id="login-link">Sair</a>
         </nav>
     </div>
     <main class="container">
@@ -113,5 +124,6 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="../script/menu.js"></script>
 </body>
 </html>
