--- a/pages/voluntario/cadastro-pet.html
+++ b/pages/voluntario/cadastro-pet.html
@@ -14,7 +14,8 @@
         <nav>
             <a href="../voluntario/home_voluntario.html">Animais Cadastrados</a>
             <a href="../voluntario/cadastro-pet.html" class="active">Adicionar Pet</a>
-            <a href="../voluntario/editarperfil.html">Perfil</a>
+            <a href="../chat.html">Chat</a>
+            <a href="../editarperfil.html">Perfil</a>
             <a href="../login.html" id="login-link">Sair</a>
         </nav>
     </div>
