fixing path home and cadastro

--- a/pages/editarperfil.html
+++ b/pages/editarperfil.html
@@ -22,8 +22,8 @@
 
     <div class="menu" id="menu-voluntario">
         <nav>
-            <a href="../voluntario/home_voluntario.html">Animais Cadastrados</a>
-            <a href="../voluntario/cadastro-pet.html">Adicionar Pet</a>
+            <a href="voluntario/home_voluntario.html">Animais Cadastrados</a>
+            <a href="voluntario/cadastro-pet.html">Adicionar Pet</a>
             <a href="chat.html">Chat</a>
             <a href="editarperfil.html" class="active">Perfil</a>
             <a href="login.html" id="login-link">Sair</a>
