--- a/pages/adotante/favoritos.html
+++ b/pages/adotante/favoritos.html
@@ -1,8 +1,8 @@
+<!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="../../css/style.css">
     <link rel="stylesheet" href="../../css/card.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600&display=swap" rel="stylesheet">
@@ -13,20 +13,20 @@
     <div class="menu">
         <nav>
             <a href="../adotante/listar-pets.html">Adotar</a>
-            <a href="../adotante/favoritos.html"  class="active">Favoritos</a>
+            <a href="../adotante/favoritos.html" class="active">Favoritos</a>
             <a href="../chat.html">Chat</a>
             <a href="../editarperfil.html">Perfil</a>
             <a href="../login.html" id="login-link">Sair</a>
         </nav>
     </div>
-    <main class="container">
-
-    </main>
     
-    <footer class="bg-dark text-white text-center p-3">
-        <p>&copy; 2025 - Desenvolvimento Web I. Todos os direitos reservados.</p>
-    </footer>
+<div id="title"><h2 class="title">Favoritos</h2></div>
+    <main id="favoritos-container" class="d-flex justify-content-center align-items-center">
+         
+    </main>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
+    <script src="../../script/favoritos.js"></script>
+    <div id="toast-message" class="toast-container"></div>
+    <script src="../../script/home_voluntario.js"></script>
 </body>
 </html>
