--- a/pages/editarperfil.html
+++ b/pages/editarperfil.html
@@ -2,7 +2,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../css/login.css">
     <link rel="stylesheet" href="../css/style.css">
     <link rel="stylesheet" href="../css/card.css">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600&display=swap" rel="stylesheet">
@@ -29,72 +28,69 @@
             <a href="login.html" id="login-link">Sair</a>
         </nav>
     </div>
-    <main class="container">
-        <div id="title">
-                <div>
-                    <div class="title">
-                        <h2>Editar perfil</h2>
-                    </div>
-                    <form>
-                        <h3>Informações pessoais</h3>
-                        <div class="form-group">
-                            <label for="nome" class="form-label">Nome completo</label>
-                            <input type="text" class="form-control" id="nome" maxlength="40">
-                        </div>
-                        <div class="form-group">
-                            <label for="sexo" class="form-label">Sexo</label>
-                            <select class="form-select" id="sexo">
-                                <option value="masc">Masculino</option>
-                                <option value="fem">Feminino</option>
-                            </select>
-                        </div>
-                        <div class="form-group">
-                            <label for="fone" class="form-label">Telefone</label>
-                            <input type="tel" class="form-control" id="fone">
-                        </div>
-                        <div class="form-group">
-                            <label for="nasc" class="form-label">Data de Nascimento</label>
-                            <input type="date" class="form-select" id="nasc">
-                        </div>
-                        <div class="form-group">
-                            <label for="descricao" class="form-label">Descrição</label>
-                            <textarea class="form-control" id="descricao" rows="4"></textarea>
-                        </div>
-                        <p>
-                        <h3>Endereço</h3>
-                        <div class="form-group">
-                            <label for="rua" class="form-label">Logradouro</label>
-                            <input type="text" class="form-control" id="rua" maxlength="40">
-                        </div>
-                        <div class="form-group">
-                            <label for="nmr" class="form-label">Numero</label>
-                            <input type="tel" class="form-control" id="nmr">
-                        </div>
-                        <div class="form-group">
-                            <label for="complemento" class="form-label">Complemento</label>
-                            <input type="text" class="form-control" id="complemento" maxlength="40">
-                        </div>
-                        <div class="form-group">
-                            <label for="cidade" class="form-label">Cidade</label>
-                            <input type="text" class="form-control" id="cidade" maxlength="25">
-                        </div>
-                        <div class="form-group">
-                            <label for="estado" class="form-label">Estado</label>
-                            <input type="text" class="form-control" id="estado" maxlength="40">
-                        </div>
-                        
-                        <p></p>
-                        <button type="cadastrar" class="btn btn-primary">Salvar alterações</button>
-                        <p></p>
-                    </form>
-                </div>
+<main class="container d-flex justify-content-center align-items-center min-vh-100">
+    <div class="col-lg-6 col-md-8">
+        <div class="title text-center mb-4">
+            <h2>Editar perfil</h2>
+        </div>
+        <form>
+            <div class="mb-3">
+                <label for="nome" class="form-label">Nome completo</label>
+                <input type="text" class="form-control" id="nome" maxlength="40">
+            </div>
+            <div class="mb-3">
+                <label for="sexo" class="form-label">Sexo</label>
+                <select class="form-select" id="sexo">
+                    <option value="masc">Masculino</option>
+                    <option value="fem">Feminino</option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label for="fone" class="form-label">Telefone</label>
+                <input type="tel" class="form-control" id="fone">
+            </div>
+            <div class="mb-3">
+                <label for="nasc" class="form-label">Data de Nascimento</label>
+                <input type="date" class="form-control" id="nasc">
+            </div>
+            <div class="mb-3">
+                <label for="descricao" class="form-label">Descrição</label>
+                <textarea class="form-control" id="descricao" rows="4"></textarea>
+            </div>
+
+
+            <div class="mb-3">
+                <label for="rua" class="form-label">Logradouro</label>
+                <input type="text" class="form-control" id="rua" maxlength="40">
+            </div>
+            <div class="mb-3">
+                <label for="nmr" class="form-label">Número</label>
+                <input type="tel" class="form-control" id="nmr">
+            </div>
+            <div class="mb-3">
+                <label for="complemento" class="form-label">Complemento</label>
+                <input type="text" class="form-control" id="complemento" maxlength="40">
+            </div>
+            <div class="mb-3">
+                <label for="cidade" class="form-label">Cidade</label>
+                <input type="text" class="form-control" id="cidade" maxlength="25">
+            </div>
+            <div class="mb-3">
+                <label for="estado" class="form-label">Estado</label>
+                <input type="text" class="form-control" id="estado" maxlength="40">
+            </div>
+
+
+            <div class="d-flex justify-content-end gap-2 mt-4">
+                <button type="submit" class="btn btn-primary">Salvar alterações</button>
+                <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#meuModalID">
+                    Excluir perfil
+                </button>
+            </div>
+        </form>
+    </div>
         </div>
 
-        <div class="container text-center m-5">
-            <button type="button" class="btn btn-danger" data-bs-toggle="modal" data-bs-target="#meuModalID">
-                Excluir perfil
-            </button>
-        </div>
 
         <div class="modal fade" id="meuModalID">
         <div class="modal-dialog">
