--- a/pages/cadastrousuario.html
+++ b/pages/cadastrousuario.html
@@ -3,188 +3,193 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cadastro de Usuário • Deu Pet</title>
-  <!-- Bootstrap 5 -->
+  <title>Cadastrar Usuário</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;500;600&display=swap" rel="stylesheet">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <!-- Bootstrap Icons -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.css" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="../css/style.css">
 </head>
-<body class="bg-light d-flex flex-column min-vh-100">
-  <!-- Navbar responsiva -->
-  <nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm sticky-top">
-    <div class="container">
-      <a class="navbar-brand d-flex align-items-center fw-bold text-primary" href="../index.html">
-        <img src="../assets/img/logo.png" alt="Logo Deu Pet" width="40" height="40" class="me-2">
-        Deu Pet
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navMain" aria-controls="navMain" aria-expanded="false" aria-label="Alternar navegação">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navMain">
-        <ul class="navbar-nav ms-auto">
-          <li class="nav-item"><a class="nav-link" href="./index.html">Início</a></li>
-          <li class="nav-item"><a class="nav-link active" aria-current="page" href="#">Cadastro</a></li>
-        </ul>
-      </div>
-    </div>
-  </nav>
+<body class="bg-light">
 
-  <main class="flex-fill">
-    <section class="container py-5">
-      <div class="row justify-content-center">
-        <div class="col-12 col-lg-10 col-xl-8">
-          <div class="text-center mb-4">
-            <h1 class="text-primary display-6 fw-bold">Crie uma conta</h1>
-            <p class="text-muted mb-0">Cadastre-se para encontrar e adotar um pet!</p>
-          </div>
+  <div class="menu">
+    <nav>
+      <a href="index.html" class="active">Início</a>
+      <a href="login.html" id="login-link">Entrar</a>
+    </nav>
+  </div>
 
-          <div id="alerts" class="mb-3"></div>
+  <main class="container py-4">
+    <div class="row justify-content-center">
+      <div class="col-lg-8 col-md-10">
+        <div class="card border-0 shadow">
+          <div class="card-body p-4 p-md-5">
 
-          <div class="card p-4 p-md-5">
+            <div class="mb-4 text-center">
+              <h2 class="mb-1">Cadastrar Usuário</h2>
+              <p class="text-muted mb-0">Junte-se a nós: adote um pet ou ofereça seu apoio como voluntário e faça a diferença.</p>
+            </div>
+
+            <div id="alerts" class="mb-3"></div>
+
             <form id="registrationForm" novalidate>
-              <!-- Avatar -->
-              <div class="d-flex justify-content-center mb-4">
-                <div class="position-relative" style="width:120px; height:120px;">
-                  <img id="avatarPreview" src="https://cdn.jsdelivr.net/gh/creotiv/files@main/avatar_placeholder.png" alt="Foto de perfil" class="rounded-circle border border-3 border-white shadow-sm w-100 h-100 object-fit-cover">
-                  <input type="file" id="avatarFile" accept="image/*" class="d-none">
-                  <button type="button" class="btn btn-light border rounded-circle position-absolute bottom-0 end-0" id="pickAvatar" title="Selecionar foto">
-                    <i class="bi bi-camera"></i>
-                  </button>
+              <div class="mb-4">
+                <label class="form-label d-block">Foto de Perfil</label>
+                <div class="d-flex align-items-center gap-3">
+                  <img id="avatarPreview"
+                       src="https://cdn.jsdelivr.net/gh/creotiv/files@main/avatar_placeholder.png"
+                       alt="Foto de perfil"
+                       class="rounded-circle border shadow-sm"
+                       width="96" height="96">
+                  <div>
+                    <input type="file" id="avatarFile" accept="image/*" class="form-control">
+                    <div class="form-text">Opcional. PNG ou JPG de até 2MB.</div>
+                  </div>
                 </div>
               </div>
 
               <div class="row g-3">
                 <div class="col-md-6">
                   <label for="nome" class="form-label">Nome</label>
-                  <input class="form-control" id="nome" required>
-                  <div class="invalid-feedback">Campo obrigatório.</div>
+                  <input type="text" class="form-control" id="nome" required>
+                  <div class="invalid-feedback">Campo obrigatório!</div>
                 </div>
-
                 <div class="col-md-6">
                   <label for="email" class="form-label">Email</label>
                   <input type="email" class="form-control" id="email" required>
-                  <div class="invalid-feedback">Informe um email válido.</div>
+                  <div class="invalid-feedback">Informe um email válido!</div>
                 </div>
+              </div>
 
+              <div class="row g-3 mt-0">
                 <div class="col-md-6">
                   <label for="telefone" class="form-label">Telefone</label>
                   <input type="tel" class="form-control" id="telefone" placeholder="(xx) xxxxx-xxxx" required>
-                  <div class="invalid-feedback">Campo obrigatório.</div>
+                  <div class="invalid-feedback">Campo obrigatório!</div>
                 </div>
-
                 <div class="col-md-6">
                   <label for="senha" class="form-label">Senha</label>
                   <input type="password" class="form-control" id="senha" minlength="6" required>
-                  <div class="invalid-feedback">Mínimo de 6 caracteres.</div>
+                  <div class="invalid-feedback">Mínimo de 6 caracteres!</div>
                 </div>
+              </div>
 
-                <div class="col-md-4">
-                  <label for="cep" class="form-label">CEP</label>
-                  <div class="input-group">
-                    <input class="form-control" id="cep" placeholder="00000-000" required>
-                    <button class="btn btn-success" type="button" id="buscarCep">Buscar</button>
-                    <div class="invalid-feedback">Informe o CEP.</div>
-                  </div>
-                  <div class="form-text">Usa ViaCEP para preencher o endereço.</div>
-                </div>
-
-                <div class="col-md-8">
-                  <label for="logradouro" class="form-label">Logradouro</label>
-                  <input class="form-control" id="logradouro" disabled>
-                </div>
-
-                <div class="col-md-4">
-                  <label for="bairro" class="form-label">Bairro</label>
-                  <input class="form-control" id="bairro" disabled>
-                </div>
-
-                <div class="col-md-4">
-                  <label for="cidade" class="form-label">Cidade</label>
-                  <input class="form-control" id="cidade" disabled>
-                </div>
-
-                <div class="col-md-4">
-                  <label for="estado" class="form-label">Estado</label>
-                  <input class="form-control" id="estado" disabled>
-                </div>
-
+              <div class="row g-3 mt-0">
                 <div class="col-md-6">
                   <label for="dataNascimento" class="form-label">Data de Nascimento</label>
-                  <input type="date" class="form-control" id="dataNascimento" max="">
+                  <input type="date" class="form-control" id="dataNascimento">
                 </div>
-
                 <div class="col-md-6">
                   <label for="cpfCnpj" class="form-label">CPF/CNPJ</label>
-                  <input class="form-control" id="cpfCnpj" required>
-                  <div class="invalid-feedback">Informe um CPF/CNPJ válido.</div>
+                  <input type="text" class="form-control" id="cpfCnpj" required>
+                  <div class="invalid-feedback">Informe um CPF/CNPJ válido!</div>
                 </div>
+              </div>
 
+              <div class="row g-3 mt-0">
                 <div class="col-md-6">
                   <label for="tipo" class="form-label">Tipo</label>
                   <select class="form-select" id="tipo" required>
-                    <option value="" selected disabled>Selecione...</option>
+                    <option value="" disabled selected>Selecione</option>
                     <option value="adotante">Adotante</option>
                     <option value="voluntario">Voluntário</option>
                   </select>
-                  <div class="invalid-feedback">Selecione um tipo.</div>
+                  <div class="invalid-feedback">Campo obrigatório!</div>
                 </div>
 
-                <div class="col-12">
-                  <label for="descricao" class="form-label">Descrição</label>
-                  <textarea class="form-control" id="descricao" rows="4" placeholder="Conte um pouco sobre você..."></textarea>
+                <div class="col-md-6">
+                  <label for="cep" class="form-label">CEP</label>
+                  <div class="input-group">
+                    <input type="text" class="form-control" id="cep" placeholder="00000-000" required>
+                    <button class="btn btn-success" type="button" id="buscarCep">Buscar</button>
+                    <div class="invalid-feedback">Campo obrigatório!</div>
+                  </div>
                 </div>
               </div>
 
-              <div class="d-grid d-sm-flex gap-2 mt-4">
-                <button id="btnCadastrar" class="btn btn-success btn-lg px-4" type="submit">
-                  <i class="bi bi-check2-circle me-2"></i> Cadastrar
-                </button>
-                <a href="#" class="btn btn-outline-secondary btn-lg" onclick="alert('Tela de login ainda não implementada (frontend).'); return false;">
-                  Já tem uma conta? Entrar
-                </a>
+              <div class="mt-3">
+                <label for="logradouro" class="form-label">Logradouro</label>
+                <input type="text" class="form-control" id="logradouro" readonly>
+              </div>
+              <div class="row g-3 mt-0">
+                <div class="col-md-4">
+                  <label for="bairro" class="form-label">Bairro</label>
+                  <input type="text" class="form-control" id="bairro" readonly>
+                </div>
+                <div class="col-md-4">
+                  <label for="cidade" class="form-label">Cidade</label>
+                  <input type="text" class="form-control" id="cidade" readonly>
+                </div>
+                <div class="col-md-4">
+                  <label for="estado" class="form-label">Estado</label>
+                  <input type="text" class="form-control" id="estado" readonly>
+                </div>
+              </div>
+
+              <div class="mt-3">
+                <label for="descricao" class="form-label">Descrição</label>
+                <textarea class="form-control" id="descricao" rows="2" placeholder="Conte um pouco sobre você..."></textarea>
+              </div>
+
+              <div class="d-grid mt-4">
+                <button id="btnCadastrar" type="submit" class="btn btn-success btn-lg">Cadastrar</button>
               </div>
             </form>
+
           </div>
         </div>
       </div>
-    </section>
+    </div>
   </main>
 
-  <footer class="bg-white text-center py-3 mt-auto border-top">
-    <div class="container d-flex flex-wrap justify-content-between align-items-center gap-2">
-      <span class="text-muted">© 2025 • Desenvolvimento Web I</span>
-      <span class="text-muted">Deu Pet</span>
-    </div>
+  <footer class="bg-dark text-white text-center p-3">
+    <p class="mb-0">&copy; 2025 - Desenvolvimento Web I. Todos os direitos reservados.</p>
   </footer>
 
-  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 
   <script>
-    // (scripts de validação, CEP e CPF/CNPJ permanecem iguais...)
+    const inputData = document.getElementById('dataNascimento');
+    if (inputData) inputData.max = new Date().toISOString().split('T')[0];
 
-    // --- Ajuste automático do caminho da logo (tenta algumas pastas comuns) ---
-    (function(){
-      const img = document.getElementById('logoBrand');
-      if (!img) return;
-      const candidates = [
-        '../assets/img/logo.png',   // HTML em /pages
-        'assets/img/logo.png',      // se o HTML estiver na raiz (ajuste conforme seu projeto)
-        '../../assets/img/logo.png' // se estiver mais fundo
-      ];
-      let tried = 0;
-      function tryNext(){
-        if (tried >= candidates.length) return;
-        const test = new Image();
-        const path = candidates[tried++];
-        test.onload = () => { img.src = path; };
-        test.onerror = tryNext;
-        test.src = path;
-      }
-      // caso o primeiro falhe, testa os outros
-      img.addEventListener('error', tryNext, { once: true });
-    })();
+    const avatarFileInput = document.getElementById('avatarFile');
+    const avatarPreview = document.getElementById('avatarPreview');
+    if (avatarFileInput && avatarPreview){
+      avatarFileInput.addEventListener('change', (e) => {
+        const file = e.target.files?.[0];
+        if (!file) return;
+        avatarPreview.src = URL.createObjectURL(file);
+      });
+    }
+
+    const buscarCepBtn = document.getElementById('buscarCep');
+    if (buscarCepBtn){
+      buscarCepBtn.addEventListener('click', async () => {
+        const cepEl = document.getElementById('cep');
+        const cep = (cepEl.value || '').replace(/\D/g,'');
+        if (cep.length !== 8){ alert('CEP inválido.'); return; }
+        try{
+          const res = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
+          const data = await res.json();
+          if (data.erro){ alert('CEP não encontrado.'); return; }
+          document.getElementById('logradouro').value = data.logradouro || '';
+          document.getElementById('bairro').value = data.bairro || '';
+          document.getElementById('cidade').value = data.localidade || '';
+          document.getElementById('estado').value = data.uf || '';
+        }catch(err){ alert('Erro ao buscar CEP.'); }
+      });
+    }
+
+    const form = document.getElementById('registrationForm');
+    if (form){
+      form.addEventListener('submit', (e) => {
+        if (!form.checkValidity()){
+          e.preventDefault();
+          e.stopPropagation();
+        }
+        form.classList.add('was-validated');
+      });
+    }
   </script>
 </body>
 </html>
