--- a/pages/index.html
+++ b/pages/index.html
@@ -13,7 +13,7 @@
     <div class="menu">
         <nav>
             <a href="index.html" class="active">Inicio</a>
-            <a href="#">Cadastre-se</a>
+            <a href="cadastrousuario.html">Cadastre-se</a>
             <a href="login.html" id="login-link">Entrar</a>
         </nav>
     </div>
