--- a/pages/cadastrousuario.html
+++ b/pages/cadastrousuario.html
@@ -14,7 +14,8 @@
 
   <div class="menu">
     <nav>
-      <a href="index.html" class="active">Início</a>
+      <a href="index.html">Início</a>
+      <a href="cadastrousuario.html" class="active">Cadastre-se</a>
       <a href="login.html" id="login-link">Entrar</a>
     </nav>
   </div>
