--- a/pages/cadastrousuario.html
+++ b/pages/cadastrousuario.html
@@ -44,7 +44,7 @@
                        width="96" height="96">
                   <div>
                     <input type="file" id="avatarFile" accept="image/*" class="form-control">
-                    <div class="form-text">Opcional. PNG ou JPG de até 2MB.</div>
+                    <div class="form-text">Opcional. PNG ou JPG de até 10MB.</div>
                   </div>
                 </div>
               </div>
@@ -148,49 +148,12 @@
   </footer>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="../script/cadastro-usuario.js"></script>
 
-  <script>
-    const inputData = document.getElementById('dataNascimento');
-    if (inputData) inputData.max = new Date().toISOString().split('T')[0];
-
-    const avatarFileInput = document.getElementById('avatarFile');
-    const avatarPreview = document.getElementById('avatarPreview');
-    if (avatarFileInput && avatarPreview){
-      avatarFileInput.addEventListener('change', (e) => {
-        const file = e.target.files?.[0];
-        if (!file) return;
-        avatarPreview.src = URL.createObjectURL(file);
-      });
-    }
-
-    const buscarCepBtn = document.getElementById('buscarCep');
-    if (buscarCepBtn){
-      buscarCepBtn.addEventListener('click', async () => {
-        const cepEl = document.getElementById('cep');
-        const cep = (cepEl.value || '').replace(/\D/g,'');
-        if (cep.length !== 8){ alert('CEP inválido.'); return; }
-        try{
-          const res = await fetch(`https://viacep.com.br/ws/${cep}/json/`);
-          const data = await res.json();
-          if (data.erro){ alert('CEP não encontrado.'); return; }
-          document.getElementById('logradouro').value = data.logradouro || '';
-          document.getElementById('bairro').value = data.bairro || '';
-          document.getElementById('cidade').value = data.localidade || '';
-          document.getElementById('estado').value = data.uf || '';
-        }catch(err){ alert('Erro ao buscar CEP.'); }
-      });
-    }
-
-    const form = document.getElementById('registrationForm');
-    if (form){
-      form.addEventListener('submit', (e) => {
-        if (!form.checkValidity()){
-          e.preventDefault();
-          e.stopPropagation();
-        }
-        form.classList.add('was-validated');
-      });
-    }
-  </script>
+  <div id="loadingSpinner" style="display:none;position:fixed;top:0;left:0;width:100vw;height:100vh;z-index:9999;background:rgba(255,255,255,0.7);align-items:center;justify-content:center;">
+    <div class="spinner-border text-success" style="width: 4rem; height: 4rem;" role="status">
+      <span class="visually-hidden">Carregando...</span>
+    </div>
+  </div>
 </body>
 </html>
